# MiniFileExplorer

./: CMakeLists.txt  README.md
src/: App.cpp  App.h  Command.cpp  Command.h  CommandParser.cpp  CommandParser.h  Commands.cpp  Commands.h  FileInfo.h  FileSystemContext.h  FsUtil.cpp  FsUtil.h  main.cpp
